--- a/preview/pr-1/components/index.html
+++ b/preview/pr-1/components/index.html
@@ -43,21 +43,21 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>Projects | miekoyao</title>
+<title>Components | HistoryOfInsulin</title>
 
 <link rel="icon" href="/history-of-insulin-project/preview/pr-1/images/icon.png">
 
-<meta name="title" content="Projects">
+<meta name="title" content="Components">
 <meta name="description" content="An engaging 1-3 sentence description of your lab.">
 
-<meta property="og:title" content="Projects">
-<meta property="og:site_title" content="miekoyao">
+<meta property="og:title" content="Components">
+<meta property="og:site_title" content="HistoryOfInsulin">
 <meta property="og:description" content="An engaging 1-3 sentence description of your lab.">
 <meta property="og:url" content="/history-of-insulin-project/preview/pr-1">
 <meta property="og:image" content="/history-of-insulin-project/preview/pr-1/images/share.jpg">
 <meta property="og:locale" content="en_US">
 
-<meta property="twitter:title" content="Projects">
+<meta property="twitter:title" content="Components">
 <meta property="twitter:description" content="An engaging 1-3 sentence description of your lab.">
 <meta property="twitter:url" content="/history-of-insulin-project/preview/pr-1">
 <meta property="twitter:card" content="summary_large_image">
@@ -73,9 +73,9 @@
     
       "@type": "WebSite",
     
-    "name": "Projects",
+    "name": "Components",
     "description": "An engaging 1-3 sentence description of your lab.",
-    "headline": "Projects",
+    "headline": "Components",
     "publisher": {
       "@type": "Organization",
       "logo": { "@type": "ImageObject", "url": "/history-of-insulin-project/preview/pr-1/images/icon.png" }
@@ -448,7 +448,7 @@
     
       <span class="title-text" data-tooltip="Home">
         
-          <span class="title">miekoyao</span>
+          <span class="title">HistoryOfInsulin</span>
         
         
       </span>
@@ -461,14 +461,14 @@
     
     
       
-        <a href="/history-of-insulin-project/preview/pr-1/research/" data-tooltip="Published works">
-          Research
+        <a href="/history-of-insulin-project/preview/pr-1/components/" data-tooltip="The parts of the exhibit">
+          Components
         </a>
       
     
       
-        <a href="/history-of-insulin-project/preview/pr-1/projects/" data-tooltip="Software, datasets, and more">
-          Projects
+        <a href="/history-of-insulin-project/preview/pr-1/project/" data-tooltip="The overall exhibit">
+          Project
         </a>
       
     
@@ -511,23 +511,22 @@
   
 
   <section class="background" data-size="page">
-    <h1 id="projects">
-<i class="icon fa-solid fa-wrench"></i>Projects</h1>
-
+    <h1 id="individual-components">
+<i class="icon fa-solid fa-microscope"></i>Individual Components</h1>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
 Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 
-<div class="tags" data-link="/history-of-insulin-project/preview/pr-1/projects/">
+<div class="tags" data-link="/history-of-insulin-project/preview/pr-1/components/">
     
-      <a href="/projects/?search=%22tag:%20publication%22" class="tag" data-tooltip='Show items with the tag "publication"'>
+      <a href="/components/?search=%22tag:%20publication%22" class="tag" data-tooltip='Show items with the tag "publication"'>
         publication
       </a>
     
-      <a href="/projects/?search=%22tag:%20resource%22" class="tag" data-tooltip='Show items with the tag "resource"'>
+      <a href="/components/?search=%22tag:%20resource%22" class="tag" data-tooltip='Show items with the tag "resource"'>
         resource
       </a>
     
-      <a href="/projects/?search=%22tag:%20website%22" class="tag" data-tooltip='Show items with the tag "website"'>
+      <a href="/components/?search=%22tag:%20website%22" class="tag" data-tooltip='Show items with the tag "website"'>
         website
       </a>
     
@@ -576,9 +575,9 @@ Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliqu
       
 
 
-  <div class="tags" data-repo="greenelab/lab-website-template" data-link="/history-of-insulin-project/preview/pr-1/projects/">
+  <div class="tags" data-repo="greenelab/lab-website-template" data-link="/history-of-insulin-project/preview/pr-1/components/">
     
-      <a href="/projects/?search=%22tag:%20resource%22" class="tag" data-tooltip='Show items with the tag "resource"'>
+      <a href="/components/?search=%22tag:%20resource%22" class="tag" data-tooltip='Show items with the tag "resource"'>
         resource
       </a>
     
@@ -616,9 +615,9 @@ Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliqu
       
 
 
-  <div class="tags" data-repo="greenelab/lab-website-template" data-link="/history-of-insulin-project/preview/pr-1/projects/">
+  <div class="tags" data-repo="greenelab/lab-website-template" data-link="/history-of-insulin-project/preview/pr-1/components/">
     
-      <a href="/projects/?search=%22tag:%20resource%22" class="tag" data-tooltip='Show items with the tag "resource"'>
+      <a href="/components/?search=%22tag:%20resource%22" class="tag" data-tooltip='Show items with the tag "resource"'>
         resource
       </a>
     
@@ -670,13 +669,13 @@ Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliqu
       
 
 
-  <div class="tags" data-repo="greenelab/lab-website-template" data-link="/history-of-insulin-project/preview/pr-1/projects/">
+  <div class="tags" data-repo="greenelab/lab-website-template" data-link="/history-of-insulin-project/preview/pr-1/components/">
     
-      <a href="/projects/?search=%22tag:%20resource%22" class="tag" data-tooltip='Show items with the tag "resource"'>
+      <a href="/components/?search=%22tag:%20resource%22" class="tag" data-tooltip='Show items with the tag "resource"'>
         resource
       </a>
     
-      <a href="/projects/?search=%22tag:%20publication%22" class="tag" data-tooltip='Show items with the tag "publication"'>
+      <a href="/components/?search=%22tag:%20publication%22" class="tag" data-tooltip='Show items with the tag "publication"'>
         publication
       </a>
     
@@ -714,9 +713,9 @@ Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliqu
       
 
 
-  <div class="tags" data-repo="greenelab/lab-website-template" data-link="/history-of-insulin-project/preview/pr-1/projects/">
+  <div class="tags" data-repo="greenelab/lab-website-template" data-link="/history-of-insulin-project/preview/pr-1/components/">
     
-      <a href="/projects/?search=%22tag:%20software%22" class="tag" data-tooltip='Show items with the tag "software"'>
+      <a href="/components/?search=%22tag:%20software%22" class="tag" data-tooltip='Show items with the tag "software"'>
         software
       </a>
     
@@ -754,9 +753,9 @@ Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliqu
       
 
 
-  <div class="tags" data-repo="greenelab/lab-website-template" data-link="/history-of-insulin-project/preview/pr-1/projects/">
+  <div class="tags" data-repo="greenelab/lab-website-template" data-link="/history-of-insulin-project/preview/pr-1/components/">
     
-      <a href="/projects/?search=%22tag:%20software%22" class="tag" data-tooltip='Show items with the tag "software"'>
+      <a href="/components/?search=%22tag:%20software%22" class="tag" data-tooltip='Show items with the tag "software"'>
         software
       </a>
     
@@ -789,7 +788,7 @@ Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliqu
 
 
   <div class="button-wrapper">
-    <a class="button" href="mailto:contact@miekoyao.com" data-tooltip="Email" data-style="bare" aria-label="Email">
+    <a class="button" href="mailto:mieko.yao@mail.utoronto.ca" data-tooltip="Email" data-style="bare" aria-label="Email">
       <i class="icon fa-solid fa-envelope"></i>
       
     </a>
@@ -876,7 +875,7 @@ Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliqu
 
   <div>
     © 2025
-    miekoyao
+    HistoryOfInsulin
       |   Built with
     <a href="https://github.com/greenelab/lab-website-template">
       Lab Website Template
