--- a/preview/pr-1/components/index.html
+++ b/preview/pr-1/components/index.html
@@ -43,22 +43,22 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>Components | History Of Insulin</title>
+<title>Components | History Of Insulin Exhibit</title>
 
 <link rel="icon" href="/history-of-insulin-project/preview/pr-1/images/icon.png">
 
 <meta name="title" content="Components">
-<meta name="description" content="An engaging 1-3 sentence description of your lab.">
+<meta name="description" content="Project website for CSC490 Capstone design course.">
 
 <meta property="og:title" content="Components">
-<meta property="og:site_title" content="History Of Insulin">
-<meta property="og:description" content="An engaging 1-3 sentence description of your lab.">
+<meta property="og:site_title" content="History Of Insulin Exhibit">
+<meta property="og:description" content="Project website for CSC490 Capstone design course.">
 <meta property="og:url" content="/history-of-insulin-project/preview/pr-1">
 <meta property="og:image" content="/history-of-insulin-project/preview/pr-1/images/share.jpg">
 <meta property="og:locale" content="en_US">
 
 <meta property="twitter:title" content="Components">
-<meta property="twitter:description" content="An engaging 1-3 sentence description of your lab.">
+<meta property="twitter:description" content="Project website for CSC490 Capstone design course.">
 <meta property="twitter:url" content="/history-of-insulin-project/preview/pr-1">
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:image" content="/history-of-insulin-project/preview/pr-1/images/share.jpg">
@@ -74,7 +74,7 @@
       "@type": "WebSite",
     
     "name": "Components",
-    "description": "An engaging 1-3 sentence description of your lab.",
+    "description": "Project website for CSC490 Capstone design course.",
     "headline": "Components",
     "publisher": {
       "@type": "Organization",
@@ -448,7 +448,7 @@
     
       <span class="title-text" data-tooltip="Home">
         
-          <span class="title">History Of Insulin</span>
+          <span class="title">History Of Insulin Exhibit</span>
         
         
       </span>
@@ -869,7 +869,7 @@ Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliqu
 
   <div>
     © 2025
-    History Of Insulin
+    History Of Insulin Exhibit
       |   Built with
     <a href="https://github.com/greenelab/lab-website-template">
       Lab Website Template
