--- a/preview/pr-1/components/index.html
+++ b/preview/pr-1/components/index.html
@@ -516,23 +516,47 @@
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
 Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 
-<div class="tags" data-link="/history-of-insulin-project/preview/pr-1/components/">
+<!-- 
+
+
+  <div
+    class="tags"
     
-      <a href="/components/?search=%22tag:%20publication%22" class="tag" data-tooltip='Show items with the tag "publication"'>
+    
+      data-link="/history-of-insulin-project/preview/pr-1/components/"
+    
+  >
+    
+      <a
+        href="/components/?search=&quot;tag: publication&quot;"
+        class="tag"
+        data-tooltip="Show items with the tag &quot;publication&quot;"
+      >
         publication
       </a>
     
-      <a href="/components/?search=%22tag:%20resource%22" class="tag" data-tooltip='Show items with the tag "resource"'>
+      <a
+        href="/components/?search=&quot;tag: resource&quot;"
+        class="tag"
+        data-tooltip="Show items with the tag &quot;resource&quot;"
+      >
         resource
       </a>
     
-      <a href="/components/?search=%22tag:%20website%22" class="tag" data-tooltip='Show items with the tag "website"'>
+      <a
+        href="/components/?search=&quot;tag: website&quot;"
+        class="tag"
+        data-tooltip="Show items with the tag &quot;website&quot;"
+      >
         website
       </a>
     
   </div>
 
+
+
 <div class="search-info"></div>
+ -->
   </section>
 
   
@@ -546,7 +570,226 @@ Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliqu
   <size></size>
 -->
 
-<h2 id="featured">Featured</h2>
+<h3 id="2023">2023</h3>
+
+<div class="post-excerpt-container">
+  <div class="post-excerpt">
+    
+    
+    
+
+    
+      <a href="/history-of-insulin-project/preview/pr-1/2023/02/23/example-post-3.html" class="post-excerpt-image" aria-label="Example post 3">
+        <img src="/history-of-insulin-project/preview/pr-1/images/photo.jpg" alt="Example post 3" loading="lazy" onerror="this.src = '/history-of-insulin-project/preview/pr-1/images/fallback.svg'; this.onerror = null;">
+      </a>
+    
+
+    <div class="post-excerpt-text">
+      <a href="/history-of-insulin-project/preview/pr-1/2023/02/23/example-post-3.html">Example post 3</a>
+
+      <div class="post-info">
+  
+    
+    
+      
+      
+        <span data-tooltip="Author">
+          <i class="icon fa-solid fa-feather-pointed"></i>
+          <span>john-doe</span>
+        </span>
+      
+    
+  
+
+  
+  
+
+  
+    <span data-tooltip="Originally published on">
+      <i class="icon fa-regular fa-calendar"></i>
+      <span>February 23, 2023</span>
+    </span>
+  
+
+  
+    <span data-tooltip="Last updated on">
+      <i class="icon fa-solid fa-clock-rotate-left"></i>
+      <span>March 27, 2025</span>
+    </span>
+  
+</div>
+
+
+  
+
+
+  <div class="tags" data-link="/history-of-insulin-project/preview/pr-1/blog">
+    
+      <a href="blog?search=%22tag:%20biology%22" class="tag" data-tooltip='Show items with the tag "biology"'>
+        biology
+      </a>
+    
+      <a href="blog?search=%22tag:%20medicine%22" class="tag" data-tooltip='Show items with the tag "medicine"'>
+        medicine
+      </a>
+    
+  </div>
+
+
+
+
+
+      
+      
+      <p data-search="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+
+      </p>
+    </div>
+  </div>
+</div>
+
+<h3 id="2021">2021</h3>
+
+<div class="post-excerpt-container">
+  <div class="post-excerpt">
+    
+    
+    
+
+    
+
+    <div class="post-excerpt-text">
+      <a href="/history-of-insulin-project/preview/pr-1/2021/09/30/example-post-2.html">Example post 2</a>
+
+      <div class="post-info">
+  
+    
+    
+      
+      
+        <span data-tooltip="Author">
+          <i class="icon fa-solid fa-feather-pointed"></i>
+          <span>jane-smith</span>
+        </span>
+      
+    
+  
+
+  
+  
+
+  
+    <span data-tooltip="Originally published on">
+      <i class="icon fa-regular fa-calendar"></i>
+      <span>September 30, 2021</span>
+    </span>
+  
+
+  
+    <span data-tooltip="Last updated on">
+      <i class="icon fa-solid fa-clock-rotate-left"></i>
+      <span>March 27, 2025</span>
+    </span>
+  
+</div>
+
+
+  
+
+
+
+
+
+
+      
+      
+      <p data-search="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+
+      </p>
+    </div>
+  </div>
+</div>
+
+<h3 id="2019">2019</h3>
+
+<div class="post-excerpt-container">
+  <div class="post-excerpt">
+    
+    
+    
+
+    
+
+    <div class="post-excerpt-text">
+      <a href="/history-of-insulin-project/preview/pr-1/2019/01/07/example-post-1.html">Example post 1</a>
+
+      <div class="post-info">
+  
+    
+    
+      
+      
+        <span data-tooltip="Author">
+          <i class="icon fa-solid fa-feather-pointed"></i>
+          <span>sarah-johnson</span>
+        </span>
+      
+    
+  
+
+  
+  
+
+  
+    <span data-tooltip="Originally published on">
+      <i class="icon fa-regular fa-calendar"></i>
+      <span>January 07, 2019</span>
+    </span>
+  
+
+  
+    <span data-tooltip="Last updated on">
+      <i class="icon fa-solid fa-clock-rotate-left"></i>
+      <span>March 27, 2025</span>
+    </span>
+  
+</div>
+
+
+  
+
+
+  <div class="tags" data-link="/history-of-insulin-project/preview/pr-1/blog">
+    
+      <a href="blog?search=%22tag:%20biology%22" class="tag" data-tooltip='Show items with the tag "biology"'>
+        biology
+      </a>
+    
+      <a href="blog?search=%22tag:%20medicine%22" class="tag" data-tooltip='Show items with the tag "medicine"'>
+        medicine
+      </a>
+    
+      <a href="blog?search=%22tag:%20big-data%22" class="tag" data-tooltip='Show items with the tag "big-data"'>
+        big-data
+      </a>
+    
+  </div>
+
+
+
+
+
+      
+      
+      <p data-search="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+
+      </p>
+    </div>
+  </div>
+</div>
 
 <div class="card" data-style="">
   <a href="https://github.com/" aria-label="Cool Dataset" class="card-image">
@@ -627,13 +870,20 @@ Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliqu
     
   </div>
 </div>
+
+<!--
   </section>
 
   
   
   
 
-  <section class="background" data-size="page">
+  <section
+    class="background"
+    data-size="page"
+    
+    
+  >
     <!--
   <background></background>
   <dark></dark>
@@ -765,6 +1015,8 @@ Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliqu
     
   </div>
 </div>
+
+<p>–&gt;</p>
   </section>
 
 
