--- a/preview/pr-1/components/flasks/index.html
+++ b/preview/pr-1/components/flasks/index.html
@@ -43,39 +43,47 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>Contact | History Of Insulin Exhibit</title>
+<title>Flask Mixing Puzzle | History Of Insulin Exhibit</title>
 
 <link rel="icon" href="/history-of-insulin-project/preview/pr-1/images/icon.png">
 
-<meta name="title" content="Contact">
+<meta name="title" content="Flask Mixing Puzzle">
 <meta name="description" content="Project website for CSC490 Capstone design course.">
 
-<meta property="og:title" content="Contact">
+<meta property="og:title" content="Flask Mixing Puzzle">
 <meta property="og:site_title" content="History Of Insulin Exhibit">
 <meta property="og:description" content="Project website for CSC490 Capstone design course.">
 <meta property="og:url" content="/history-of-insulin-project/preview/pr-1">
 <meta property="og:image" content="/history-of-insulin-project/preview/pr-1/images/share.jpg">
 <meta property="og:locale" content="en_US">
 
-<meta property="twitter:title" content="Contact">
+<meta property="twitter:title" content="Flask Mixing Puzzle">
 <meta property="twitter:description" content="Project website for CSC490 Capstone design course.">
 <meta property="twitter:url" content="/history-of-insulin-project/preview/pr-1">
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:image" content="/history-of-insulin-project/preview/pr-1/images/share.jpg">
 
 
-  <meta property="og:type" content="website">
+  <meta name="author" content="mieko-yao">
+  <meta property="og:type" content="article">
+  <meta property="og:updated_time" content="2025-03-27T06:59:34+00:00">
+  <meta property="article:published_time" content="">
+  <meta property="article:modified_time" content="2025-03-27T06:59:34+00:00">
+  <meta name="revised" content="2025-03-27T06:59:34+00:00">
 
 
 <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     
-      "@type": "WebSite",
+      "@type": "BlogPosting",
+      "author": { "@type": "Person", "name": "Flask Mixing Puzzle" },
+      "datePublished": "",
+      "dateModified": "2025-03-27T06:59:34+00:00",
     
-    "name": "Contact",
+    "name": "Flask Mixing Puzzle",
     "description": "Project website for CSC490 Capstone design course.",
-    "headline": "Contact",
+    "headline": "Flask Mixing Puzzle",
     "publisher": {
       "@type": "Organization",
       "logo": { "@type": "ImageObject", "url": "/history-of-insulin-project/preview/pr-1/images/icon.png" }
@@ -505,130 +513,7 @@
   
 
   <section class="background" data-size="page">
-    <h1 id="contact">
-<i class="icon fa-regular fa-envelope"></i>Contact</h1>
-
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-
-<div class="button-wrapper">
-    <a class="button" href="mailto:jane@smith.com" data-tooltip="Email" data-style="" aria-label="Email">
-      <i class="icon fa-solid fa-envelope"></i>
-      
-        <span>jane@smith.com</span>
-      
-    </a>
-  </div>
-
-<div class="button-wrapper">
-    <a class="button" href="tel:+1-555-867-5309" data-tooltip="Phone number" data-style="" aria-label="Phone number">
-      <i class="icon fa-solid fa-phone"></i>
-      
-        <span>(555) 867-5309</span>
-      
-    </a>
-  </div>
-
-<div class="button-wrapper">
-    <a class="button" href="https://www.google.com/maps" data-tooltip="Our location on Google Maps for easy navigation" data-style="" aria-label="Our location on Google Maps for easy navigation">
-      <i class="icon fa-solid fa-map-location-dot"></i>
-      
-        <span>Address</span>
-      
-    </a>
-  </div>
-  </section>
-
-  
-  
-  
-
-  <section class="background" data-size="page">
-    <!--
-  <background></background>
-  <dark></dark>
-  <size></size>
--->
-
-<div class="cols" style="--cols: 2">
-  
-    
-    <div>
-<figure class="figure">
-  <a class="figure-image" aria-label="Lorem ipsum">
-    <img src="/history-of-insulin-project/preview/pr-1/images/photo.jpg" style="
-        width: auto;
-        max-height: unset;
-      " alt="Lorem ipsum" loading="lazy" onerror="this.src = '/history-of-insulin-project/preview/pr-1/images/fallback.svg'; this.onerror = null;">
-  </a>
-  
-    <figcaption class="figure-caption">
-      Lorem ipsum
-
-    </figcaption>
-  
-</figure>
-
-</div>
-  
-    
-    <div>
-<figure class="figure">
-  <a class="figure-image" aria-label="Lorem ipsum">
-    <img src="/history-of-insulin-project/preview/pr-1/images/photo.jpg" style="
-        width: auto;
-        max-height: unset;
-      " alt="Lorem ipsum" loading="lazy" onerror="this.src = '/history-of-insulin-project/preview/pr-1/images/fallback.svg'; this.onerror = null;">
-  </a>
-  
-    <figcaption class="figure-caption">
-      Lorem ipsum
-
-    </figcaption>
-  
-</figure>
-
-</div>
-  
-</div>
-  </section>
-
-  
-  
-  
-
-  <section class="background" data-size="1" data-dark="true">
-    <!--
-  <background></background>
-  <dark>true</dark>
-  <size>1</size>
--->
-
-<div class="cols" style="--cols: 3">
-  
-    
-    <div>
-<p>Lorem ipsum dolor sit amet<br>
-consectetur adipiscing elit<br>
-sed do eiusmod tempor</p>
-</div>
-  
-    
-    <div>
-<p>Lorem ipsum dolor sit amet<br>
-consectetur adipiscing elit<br>
-sed do eiusmod tempor</p>
-</div>
-  
-    
-    <div>
-<p>Lorem ipsum dolor sit amet<br>
-consectetur adipiscing elit<br>
-sed do eiusmod tempor</p>
-</div>
-  
-</div>
+    <p>For the first interactive component of our project, users pour reagents in and out of flasks to achieve a mixture of specific goal proportions.</p>
   </section>
 
 
