--- a/preview/pr-1/components/index.html
+++ b/preview/pr-1/components/index.html
@@ -479,12 +479,6 @@
       
     
       
-        <a href="/history-of-insulin-project/preview/pr-1/blog/" data-tooltip="Musings and miscellany">
-          Blog
-        </a>
-      
-    
-      
         <a href="/history-of-insulin-project/preview/pr-1/contact/" data-tooltip="Email, address, and location">
           Contact
         </a>
@@ -792,14 +786,14 @@ Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliqu
 </div>
 
 <div class="card" data-style="">
-  <a href="https://github.com/" aria-label="Cool Dataset" class="card-image">
-    <img src="/history-of-insulin-project/preview/pr-1/images/photo.jpg" alt="Cool Dataset" loading="lazy" onerror="this.src = '/history-of-insulin-project/preview/pr-1/images/fallback.svg'; this.onerror = null;">
+  <a href="/history-of-insulin-project/preview/pr-1/components/centrifuge" aria-label="Centrifuge" class="card-image">
+    <img src="/history-of-insulin-project/preview/pr-1/images/photo.jpg" alt="Centrifuge" loading="lazy" onerror="this.src = '/history-of-insulin-project/preview/pr-1/images/fallback.svg'; this.onerror = null;">
   </a>
 
   <div class="card-text">
     
-      <a href="https://github.com/" class="card-title">
-        Cool Dataset
+      <a href="/history-of-insulin-project/preview/pr-1/components/centrifuge" class="card-title">
+        Centrifuge
     </a>
     
 
@@ -818,10 +812,10 @@ Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliqu
       
 
 
-  <div class="tags" data-repo="greenelab/lab-website-template" data-link="/history-of-insulin-project/preview/pr-1/components/">
+  <div class="tags" data-link="/history-of-insulin-project/preview/pr-1/components/">
     
-      <a href="/components/?search=%22tag:%20resource%22" class="tag" data-tooltip='Show items with the tag "resource"'>
-        resource
+      <a href="/components/?search=%22tag:%20component%22" class="tag" data-tooltip='Show items with the tag "component"'>
+        component
       </a>
     
   </div>
