--- a/preview/pr-1/components/intro/index.html
+++ b/preview/pr-1/components/intro/index.html
@@ -43,39 +43,47 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>Blog | History Of Insulin Exhibit</title>
+<title>Introduction &amp; Educational Content | History Of Insulin Exhibit</title>
 
 <link rel="icon" href="/history-of-insulin-project/preview/pr-1/images/icon.png">
 
-<meta name="title" content="Blog">
+<meta name="title" content="Introduction &amp; Educational Content">
 <meta name="description" content="Project website for CSC490 Capstone design course.">
 
-<meta property="og:title" content="Blog">
+<meta property="og:title" content="Introduction &amp; Educational Content">
 <meta property="og:site_title" content="History Of Insulin Exhibit">
 <meta property="og:description" content="Project website for CSC490 Capstone design course.">
 <meta property="og:url" content="/history-of-insulin-project/preview/pr-1">
 <meta property="og:image" content="/history-of-insulin-project/preview/pr-1/images/share.jpg">
 <meta property="og:locale" content="en_US">
 
-<meta property="twitter:title" content="Blog">
+<meta property="twitter:title" content="Introduction &amp; Educational Content">
 <meta property="twitter:description" content="Project website for CSC490 Capstone design course.">
 <meta property="twitter:url" content="/history-of-insulin-project/preview/pr-1">
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:image" content="/history-of-insulin-project/preview/pr-1/images/share.jpg">
 
 
-  <meta property="og:type" content="website">
+  <meta name="author" content="mieko-yao">
+  <meta property="og:type" content="article">
+  <meta property="og:updated_time" content="2025-03-27T06:59:34+00:00">
+  <meta property="article:published_time" content="">
+  <meta property="article:modified_time" content="2025-03-27T06:59:34+00:00">
+  <meta name="revised" content="2025-03-27T06:59:34+00:00">
 
 
 <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     
-      "@type": "WebSite",
+      "@type": "BlogPosting",
+      "author": { "@type": "Person", "name": "Introduction &amp; Educational Content" },
+      "datePublished": "",
+      "dateModified": "2025-03-27T06:59:34+00:00",
     
-    "name": "Blog",
+    "name": "Introduction &amp; Educational Content",
     "description": "Project website for CSC490 Capstone design course.",
-    "headline": "Blog",
+    "headline": "Introduction &amp; Educational Content",
     "publisher": {
       "@type": "Organization",
       "logo": { "@type": "ImageObject", "url": "/history-of-insulin-project/preview/pr-1/images/icon.png" }
@@ -479,12 +487,6 @@
       
     
       
-        <a href="/history-of-insulin-project/preview/pr-1/blog/" data-tooltip="Musings and miscellany">
-          Blog
-        </a>
-      
-    
-      
         <a href="/history-of-insulin-project/preview/pr-1/contact/" data-tooltip="Email, address, and location">
           Contact
         </a>
@@ -511,378 +513,7 @@
   
 
   <section class="background" data-size="page">
-    <h1 id="blog">
-<i class="icon fa-solid fa-feather-pointed"></i>Blog</h1>
-
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-  </section>
-
-  
-  
-  
-
-  <section class="background" data-size="page">
-    <!--
-  <background></background>
-  <dark></dark>
-  <size></size>
--->
-
-<div class="search-box">
-  <input type="text" class="search-input" oninput="onSearchInput(this)" placeholder="Search items on this page">
-  <button disabled data-tooltip="Clear search" aria-label="clear search" onclick="onSearchClear()">
-    <i class="icon fa-solid fa-magnifying-glass"></i>
-  </button>
-</div>
-
-<div class="tags" data-link="/history-of-insulin-project/preview/pr-1/blog/">
-    
-      <a href="/blog/?search=%22tag:%20biology%22" class="tag" data-tooltip='Show items with the tag "biology"'>
-        biology
-      </a>
-    
-      <a href="/blog/?search=%22tag:%20medicine%22" class="tag" data-tooltip='Show items with the tag "medicine"'>
-        medicine
-      </a>
-    
-      <a href="/blog/?search=%22tag:%20big-data%22" class="tag" data-tooltip='Show items with the tag "big-data"'>
-        big-data
-      </a>
-    
-  </div>
-
-<div class="search-info"></div>
-
-<h3 id="2023">2023</h3>
-
-<div class="post-excerpt-container">
-  <div class="post-excerpt">
-    
-    
-    
-
-    
-      <a href="/history-of-insulin-project/preview/pr-1/2023/02/23/example-post-3.html" class="post-excerpt-image" aria-label="Example post 3">
-        <img src="/history-of-insulin-project/preview/pr-1/images/photo.jpg" alt="Example post 3" loading="lazy" onerror="this.src = '/history-of-insulin-project/preview/pr-1/images/fallback.svg'; this.onerror = null;">
-      </a>
-    
-
-    <div class="post-excerpt-text">
-      <a href="/history-of-insulin-project/preview/pr-1/2023/02/23/example-post-3.html">Example post 3</a>
-
-      <div class="post-info">
-  
-    
-    
-      
-      
-        <span data-tooltip="Author">
-          <i class="icon fa-solid fa-feather-pointed"></i>
-          <span>john-doe</span>
-        </span>
-      
-    
-  
-
-  
-  
-
-  
-    <span data-tooltip="Originally published on">
-      <i class="icon fa-regular fa-calendar"></i>
-      <span>February 23, 2023</span>
-    </span>
-  
-
-  
-    <span data-tooltip="Last updated on">
-      <i class="icon fa-solid fa-clock-rotate-left"></i>
-      <span>March 27, 2025</span>
-    </span>
-  
-</div>
-
-
-  
-
-
-  <div class="tags" data-link="/history-of-insulin-project/preview/pr-1/blog">
-    
-      <a href="blog?search=%22tag:%20biology%22" class="tag" data-tooltip='Show items with the tag "biology"'>
-        biology
-      </a>
-    
-      <a href="blog?search=%22tag:%20medicine%22" class="tag" data-tooltip='Show items with the tag "medicine"'>
-        medicine
-      </a>
-    
-  </div>
-
-
-
-
-
-      
-      
-      <p data-search="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-
-      </p>
-    </div>
-  </div>
-</div>
-
-<h3 id="2021">2021</h3>
-
-<div class="post-excerpt-container">
-  <div class="post-excerpt">
-    
-    
-    
-
-    
-
-    <div class="post-excerpt-text">
-      <a href="/history-of-insulin-project/preview/pr-1/2021/09/30/example-post-2.html">Example post 2</a>
-
-      <div class="post-info">
-  
-    
-    
-      
-      
-        <span data-tooltip="Author">
-          <i class="icon fa-solid fa-feather-pointed"></i>
-          <span>jane-smith</span>
-        </span>
-      
-    
-  
-
-  
-  
-
-  
-    <span data-tooltip="Originally published on">
-      <i class="icon fa-regular fa-calendar"></i>
-      <span>September 30, 2021</span>
-    </span>
-  
-
-  
-    <span data-tooltip="Last updated on">
-      <i class="icon fa-solid fa-clock-rotate-left"></i>
-      <span>March 27, 2025</span>
-    </span>
-  
-</div>
-
-
-  
-
-
-
-
-
-
-      
-      
-      <p data-search="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-
-      </p>
-    </div>
-  </div>
-</div>
-
-<h3 id="2019">2019</h3>
-
-<div class="post-excerpt-container">
-  <div class="post-excerpt">
-    
-    
-    
-
-    
-
-    <div class="post-excerpt-text">
-      <a href="/history-of-insulin-project/preview/pr-1/2019/01/07/example-post-1.html">Example post 1</a>
-
-      <div class="post-info">
-  
-    
-    
-      
-      
-        <span data-tooltip="Author">
-          <i class="icon fa-solid fa-feather-pointed"></i>
-          <span>sarah-johnson</span>
-        </span>
-      
-    
-  
-
-  
-  
-
-  
-    <span data-tooltip="Originally published on">
-      <i class="icon fa-regular fa-calendar"></i>
-      <span>January 07, 2019</span>
-    </span>
-  
-
-  
-    <span data-tooltip="Last updated on">
-      <i class="icon fa-solid fa-clock-rotate-left"></i>
-      <span>March 27, 2025</span>
-    </span>
-  
-</div>
-
-
-  
-
-
-  <div class="tags" data-link="/history-of-insulin-project/preview/pr-1/blog">
-    
-      <a href="blog?search=%22tag:%20biology%22" class="tag" data-tooltip='Show items with the tag "biology"'>
-        biology
-      </a>
-    
-      <a href="blog?search=%22tag:%20medicine%22" class="tag" data-tooltip='Show items with the tag "medicine"'>
-        medicine
-      </a>
-    
-      <a href="blog?search=%22tag:%20big-data%22" class="tag" data-tooltip='Show items with the tag "big-data"'>
-        big-data
-      </a>
-    
-  </div>
-
-
-
-
-
-      
-      
-      <p data-search="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-
-      </p>
-    </div>
-  </div>
-</div>
-
-<h3 id="2023">2023</h3>
-
-<div class="card" data-style="">
-  <a aria-label="Example post 3" class="card-image">
-    <img src="/history-of-insulin-project/preview/pr-1/images/photo.jpg" alt="Example post 3" loading="lazy" onerror="this.src = '/history-of-insulin-project/preview/pr-1/images/fallback.svg'; this.onerror = null;">
-  </a>
-
-  <div class="card-text">
-    
-      <a class="card-title">
-        Example post 3
-    </a>
-    
-
-    
-
-    
-
-    
-      
-
-
-  <div class="tags" data-link="/history-of-insulin-project/preview/pr-1/blog/">
-    
-      <a href="/blog/?search=%22tag:%20biology%22" class="tag" data-tooltip='Show items with the tag "biology"'>
-        biology
-      </a>
-    
-      <a href="/blog/?search=%22tag:%20medicine%22" class="tag" data-tooltip='Show items with the tag "medicine"'>
-        medicine
-      </a>
-    
-  </div>
-
-
-    
-  </div>
-</div>
-
-<h3 id="2021">2021</h3>
-
-<div class="card" data-style="">
-  <a aria-label="Example post 2" class="card-image">
-    <img src="" alt="Example post 2" loading="lazy" onerror="this.src = '/history-of-insulin-project/preview/pr-1/images/fallback.svg'; this.onerror = null;">
-  </a>
-
-  <div class="card-text">
-    
-      <a class="card-title">
-        Example post 2
-    </a>
-    
-
-    
-
-    
-
-    
-      
-
-
-
-    
-  </div>
-</div>
-
-<h3 id="2019">2019</h3>
-
-<div class="card" data-style="">
-  <a aria-label="Example post 1" class="card-image">
-    <img src="" alt="Example post 1" loading="lazy" onerror="this.src = '/history-of-insulin-project/preview/pr-1/images/fallback.svg'; this.onerror = null;">
-  </a>
-
-  <div class="card-text">
-    
-      <a class="card-title">
-        Example post 1
-    </a>
-    
-
-    
-
-    
-
-    
-      
-
-
-  <div class="tags" data-link="/history-of-insulin-project/preview/pr-1/blog/">
-    
-      <a href="/blog/?search=%22tag:%20biology%22" class="tag" data-tooltip='Show items with the tag "biology"'>
-        biology
-      </a>
-    
-      <a href="/blog/?search=%22tag:%20medicine%22" class="tag" data-tooltip='Show items with the tag "medicine"'>
-        medicine
-      </a>
-    
-      <a href="/blog/?search=%22tag:%20big-data%22" class="tag" data-tooltip='Show items with the tag "big-data"'>
-        big-data
-      </a>
-    
-  </div>
-
-
-    
-  </div>
-</div>
+    <p>For every component of the exhibit, we created audio instructions, written instructions, and written backgrounds for users to learn more in-depth knowledge.</p>
   </section>
 
 
