Deploy preview for PR 1 🛫

--- a/preview/pr-1/components/index.html
+++ b/preview/pr-1/components/index.html
@@ -515,7 +515,9 @@
   <size></size>
 -->
 
-<div class="card" data-style="">
+<h2 id="hardware--physical-components">Hardware &amp; Physical Components</h2>
+
+<div class="card" data-style="small">
   <a href="/history-of-insulin-project/preview/pr-1/components/flasks" aria-label="Mixing Flasks" class="card-image">
     <img src="/history-of-insulin-project/preview/pr-1/images/photo.jpg" alt="Mixing Flasks" loading="lazy" onerror="this.src = '/history-of-insulin-project/preview/pr-1/images/fallback.svg'; this.onerror = null;">
   </a>
@@ -555,7 +557,7 @@
   </div>
 </div>
 
-<div class="card" data-style="">
+<div class="card" data-style="small">
   <a href="/history-of-insulin-project/preview/pr-1/components/centrifuge" aria-label="Centrifuge" class="card-image">
     <img src="/history-of-insulin-project/preview/pr-1/images/photo.jpg" alt="Centrifuge" loading="lazy" onerror="this.src = '/history-of-insulin-project/preview/pr-1/images/fallback.svg'; this.onerror = null;">
   </a>
@@ -595,7 +597,7 @@
   </div>
 </div>
 
-<div class="card" data-style="">
+<div class="card" data-style="small">
   <a href="/history-of-insulin-project/preview/pr-1/components/syringe" aria-label="Syringe Layer Extraction" class="card-image">
     <img src="/history-of-insulin-project/preview/pr-1/images/photo.jpg" alt="Syringe Layer Extraction" loading="lazy" onerror="this.src = '/history-of-insulin-project/preview/pr-1/images/fallback.svg'; this.onerror = null;">
   </a>
@@ -635,7 +637,7 @@
   </div>
 </div>
 
-<div class="card" data-style="">
+<div class="card" data-style="small">
   <a href="/history-of-insulin-project/preview/pr-1/components/dog" aria-label="Marjorie" class="card-image">
     <img src="/history-of-insulin-project/preview/pr-1/images/photo.jpg" alt="Marjorie" loading="lazy" onerror="this.src = '/history-of-insulin-project/preview/pr-1/images/fallback.svg'; this.onerror = null;">
   </a>
@@ -666,6 +668,60 @@
     
       <a href="/components/?search=%22tag:%20component%22" class="tag" data-tooltip='Show items with the tag "component"'>
         component
+      </a>
+    
+  </div>
+
+
+    
+  </div>
+</div>
+  </section>
+
+  
+  
+  
+
+  <section class="background" data-size="page">
+    <!--
+  <background></background>
+  <dark></dark>
+  <size></size>
+-->
+
+<h2 id="text--voiceovers">Text &amp; Voiceovers</h2>
+
+<div class="card" data-style="small">
+  <a href="/history-of-insulin-project/preview/pr-1/text/intro" aria-label="Introduction Educational Content" class="card-image">
+    <img src="/history-of-insulin-project/preview/pr-1/images/photo.jpg" alt="Introduction Educational Content" loading="lazy" onerror="this.src = '/history-of-insulin-project/preview/pr-1/images/fallback.svg'; this.onerror = null;">
+  </a>
+
+  <div class="card-text">
+    
+      <a href="/history-of-insulin-project/preview/pr-1/text/intro" class="card-title">
+        Introduction &amp; Educational Content
+    </a>
+    
+
+    
+      <span class="card-subtitle">a subtitle</span>
+    
+
+    
+      <p>
+        Lorem ipsum <em>dolor sit amet</em>, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+
+      </p>
+    
+
+    
+      
+
+
+  <div class="tags" data-link="/history-of-insulin-project/preview/pr-1/components/">
+    
+      <a href="/components/?search=%22tag:%20text%22" class="tag" data-tooltip='Show items with the tag "text"'>
+        text
       </a>
     
   </div>
